[gd_scene load_steps=7 format=3 uid="uid://djqacw65swdqc"]

[ext_resource type="Script" path="res://demo.gd" id="1_76ghk"]
[ext_resource type="PackedScene" uid="uid://c5hi8nsm1d2hb" path="res://sm_42v_1.tscn" id="2_t8uqe"]
[ext_resource type="PackedScene" uid="uid://1v37c7y4cwcx" path="res://gauge.tscn" id="3_dosfj"]
[ext_resource type="PackedScene" uid="uid://br6moafqr8ykn" path="res://debug_panel.tscn" id="3_p4ciw"]
[ext_resource type="PackedScene" uid="uid://cslby72tp46ig" path="res://debug_switch.tscn" id="4_xvhus"]
[ext_resource type="Script" path="res://powered_train_part_example.gd" id="6_2wkl6"]

[node name="Demo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_76ghk")

[node name="EngineRPM" parent="." instance=ExtResource("3_dosfj")]
visible = false
position = Vector2(0, 453)
start_angle = 140.0
label = "Engine RPM"

[node name="EngineCurrent" parent="." instance=ExtResource("3_dosfj")]
visible = false
position = Vector2(200, 453)
start_angle = 140.0
label = "Engine Current"

[node name="OilPressure" parent="." instance=ExtResource("3_dosfj")]
visible = false
position = Vector2(400, 453)
start_angle = 140.0
label = "Oil Pressure"

[node name="BrakeCylinderPressure" parent="." instance=ExtResource("3_dosfj")]
visible = false
position = Vector2(600, 453)
start_angle = 140.0
label = "BrakeCyl Pressure"

[node name="BrakePipePressure" parent="." instance=ExtResource("3_dosfj")]
visible = false
position = Vector2(800, 453)
start_angle = 130.0
label = "Main pipe"

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="UI"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TrainName" type="Label" parent="UI/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="BatteryLabel" type="Label" parent="UI/Header"]
layout_mode = 2
size_flags_horizontal = 0
text = "Battery"

[node name="BatteryProgressBar" type="ProgressBar" parent="UI/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
tooltip_text = "Battery"
max_value = 110.0
show_percentage = false

[node name="BatteryValue" type="Label" parent="UI/Header"]
unique_name_in_owner = true
layout_mode = 2

[node name="Title" type="Label" parent="UI/Header"]
layout_mode = 2
size_flags_horizontal = 10
text = "MaSzyna MOVER TESTER"
horizontal_alignment = 2

[node name="DebugPanels" type="HFlowContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 3

[node name="DebugDoor" parent="UI/DebugPanels" instance=ExtResource("3_p4ciw")]
unique_name_in_owner = true
layout_mode = 2
title = "Door"

[node name="DebugEngine" parent="UI/DebugPanels" instance=ExtResource("3_p4ciw")]
unique_name_in_owner = true
layout_mode = 2
title = "Engine"

[node name="DebugSecurity" parent="UI/DebugPanels" instance=ExtResource("3_p4ciw")]
unique_name_in_owner = true
layout_mode = 2
title = "Security"

[node name="DebugBrake" parent="UI/DebugPanels" instance=ExtResource("3_p4ciw")]
unique_name_in_owner = true
layout_mode = 2
title = "Brake"

[node name="DebugTrain" parent="UI/DebugPanels" instance=ExtResource("3_p4ciw")]
unique_name_in_owner = true
layout_mode = 2
title = "Train"

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2
text = "Custom train part calls count:"

[node name="CustomTrainPartCount" type="Label" parent="UI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="MoverSwitches" type="HBoxContainer" parent="UI"]
layout_mode = 2

[node name="General" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "General"

[node name="Battery" parent="UI/MoverSwitches/General" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Battery"
controller = NodePath("../../../../SM42_V1")
state_property = "battery_enabled"
command = "battery"

[node name="MainIncrease" type="Button" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "Main +"

[node name="MainDecrease" type="Button" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "Main -"

[node name="Forward" type="Button" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "Forward"

[node name="Reverse" type="Button" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "Reverse"

[node name="Security" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/Security"]
layout_mode = 2
text = "Security"

[node name="CA_SHP_Reset" parent="UI/MoverSwitches/Security" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "CA/SHP"
type = 1
controller = NodePath("../../../../SM42_V1")
command = "security_acknowledge"

[node name="Diesel" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/Diesel"]
layout_mode = 2
text = "Diesel"

[node name="OilPump" parent="UI/MoverSwitches/Diesel" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Oil Pump"
type = 1
controller = NodePath("../../../../SM42_V1")
state_property = "oil_pump_active"
command = "oil_pump"

[node name="FuelPump" parent="UI/MoverSwitches/Diesel" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Fuel Pump"
type = 1
controller = NodePath("../../../../SM42_V1")
state_property = "fuel_pump_active"
command = "fuel_pump"

[node name="Main" parent="UI/MoverSwitches/Diesel" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Main"
type = 0
controller = NodePath("../../../../SM42_V1")
state_property = "main_switch"
command = "main_switch"

[node name="Electric" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/Electric"]
layout_mode = 2
text = "Electric"

[node name="Converter" parent="UI/MoverSwitches/Electric" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Converter"

[node name="Compressor" parent="UI/MoverSwitches/Electric" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Compressor"

[node name="Main" parent="UI/MoverSwitches/Electric" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Main"
type = 0

[node name="Brakes" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/Brakes"]
layout_mode = 2
text = "Brakes"

[node name="BrakeLevel" type="SpinBox" parent="UI/MoverSwitches/Brakes"]
layout_mode = 2

[node name="Releaser" parent="UI/MoverSwitches/Brakes" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Releaser"
type = 1
controller = NodePath("../../../../SM42_V1")
command = "brake_releaser"

[node name="Doors" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/Doors"]
layout_mode = 2
text = "Doors
"

[node name="LeftDoorsOpen" parent="UI/MoverSwitches/Doors" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Open left doors"
controller = NodePath("../../../../SM42_V1")
command = "doors_left_toggle"

[node name="RightDoorsOpen" parent="UI/MoverSwitches/Doors" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Open right doors"
controller = NodePath("../../../../SM42_V1")
command = "doors_right_toggle"

[node name="LeftDoorsPermit" parent="UI/MoverSwitches/Doors" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Permit left doors"
controller = NodePath("../../../../SM42_V1")
command = "doors_left_permit_toggle"

[node name="RightDoorsPermit" parent="UI/MoverSwitches/Doors" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Permit right doors"
controller = NodePath("../../../../SM42_V1")
command = "doors_right_permit_toggle"

[node name="DoorLock" parent="UI/MoverSwitches/Doors" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Lock doors"
controller = NodePath("../../../../SM42_V1")
command = "doors_lock_toggle"

[node name="SM42_V1" parent="." instance=ExtResource("2_t8uqe")]

[node name="TestowySilnikElektryczny" parent="SM42_V1" index="1"]
enabled = false

[node name="TrainDoor" parent="SM42_V1" index="5"]
type = 3
open/method = 2
close/method = 2
voltage = 2

[node name="PoweredTrainPart" type="GenericTrainPart" parent="SM42_V1"]
script = ExtResource("6_2wkl6")

[connection signal="button_up" from="UI/MoverSwitches/General/MainIncrease" to="." method="_on_main_increase_button_up"]
[connection signal="button_up" from="UI/MoverSwitches/General/MainDecrease" to="." method="_on_main_decrease_button_up"]
[connection signal="button_up" from="UI/MoverSwitches/General/Forward" to="." method="_on_forward_button_up"]
[connection signal="button_up" from="UI/MoverSwitches/General/Reverse" to="." method="_on_reverse_button_up"]
[connection signal="value_changed" from="UI/MoverSwitches/Brakes/BrakeLevel" to="." method="_on_brake_level_value_changed"]

[editable path="SM42_V1"]
